# time-series-analysis

./: .gitignore  00_load-dwd-data.ipynb  01_time-series-properties.ipynb  02_tsa-traditional.ipynb  03_tsa-ml-dl.ipynb  04_automl.ipynb  05_tsa-transformer.ipynb  README.md  intro.md  myst.yml  pyproject.toml  requirements.txt
.github/workflows/: book.yml
